<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/nav_account"
        android:title="@string/menu_minhaconta"
        android:icon="@drawable/ic_menu_perfil"/>

    <item android:id="@+id/nav_schedule"
        android:title="@string/menu_meusagendamentos"
        android:icon="@drawable/ic_menu_schedule"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/menu_configuracoes"
        android:icon="@drawable/ic_menu_settings"/>

    <item android:id="@+id/nav_logout"
        android:title="@string/menu_sair"
        android:icon="@drawable/ic_menu_logout"/>
</menu>